[project]
name = "learning-langgraph"
version = "0.1.0"
description = "My Learning Repo to practice Langgraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-aws>=0.2.35",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "pypdf>=6.7.1",
]
